[gd_scene load_steps=11 format=1]

[ext_resource path="res://Texture/dialogue_screen/sfondo mare1.tex" type="Texture" id=1]
[ext_resource path="res://Scripts/dialogue.gd" type="Script" id=2]
[ext_resource path="res://Texture/dialogue_screen/sirena smile picc.tex" type="Texture" id=3]
[ext_resource path="res://Texture/dialogue_screen/box dialogo.tex" type="Texture" id=4]
[ext_resource path="res://Fonts/animeace2.fnt" type="BitmapFont" id=5]
[ext_resource path="res://Sounds/Sample/musica menu.smp" type="Sample" id=6]
[ext_resource path="res://Sounds/Sample/musicamarco.smp" type="Sample" id=7]
[ext_resource path="res://Sounds/Sample/plup.smp" type="Sample" id=8]
[ext_resource path="res://Texture/dialogue_screen/cornice dialogo.tex" type="Texture" id=9]

[sub_resource type="SampleLibrary" id=1]

"samples/musica menu" = { "db":0.0, "pitch":1.0, "sample":ExtResource( 6 ) }
samples/musicamarco = { "db":-10.0, "pitch":1.0, "sample":ExtResource( 7 ) }
samples/plup = { "db":0.0, "pitch":1.0, "sample":ExtResource( 8 ) }

[node name="background" type="TextureFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 1 )
stretch_mode = 0
script/script = ExtResource( 2 )

[node name="sirena" type="TextureFrame" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 236.0
margin/top = 130.0
margin/right = 721.0
margin/bottom = 1271.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]

visibility/opacity = 0.0
transform/pos = Vector2( 10, 1000 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[node name="dialogueBox" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 13.0
margin/top = 1000.0
margin/right = 680.0
margin/bottom = 1282.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="dialogueBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 155.0
margin/top = 67.0
margin/right = 605.0
margin/bottom = 211.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.458824, 0.321569, 0.0745098, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 2
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="tempo" type="Timer" parent="."]

process_mode = 0
wait_time = 3.0
one_shot = true
autostart = false

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 720.0
margin/bottom = 1280.0
texture = ExtResource( 9 )
stretch_mode = 0

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]

[connection signal="timeout" from="tempo" to="." method="_on_tempo_timeout"]


